[package]
name = "compress"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
liblzma = { version = "*", features = ["parallel"] }
num_cpus = "*"
chacha20 = { version = "*", features = ["zeroize"] }
rpassword = "*"
argon2 = { version = "*", features = ["alloc"] }
rand_chacha = "*"
rand_core = { version = "*", features = ["getrandom"] }
zeroize = "*"

[lib]
name = "libcomp"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
default = []
static = ["liblzma/static"]
